--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,7 @@
-MJ_APIKEY_PUBLIC=daaf80d9cfc807579dafe4aae5dcd878
-MJ_APIKEY_PRIVATE=3102a381443e0545b48b84aae4256a35
-SENDER_EMAIL=khushimalaviya60@gmail.com
-RECIPIENT_EMAIL=virtualtrialonclothe@gmail.com
+MJ_APIKEY_PUBLIC=
+MJ_APIKEY_PRIVATE=
+SENDER_EMAIL=
+RECIPIENT_EMAIL=
 
-MONGO_URI = mongodb+srv://khushi-malaviya60:Khushi.08@virtual-trial-on-clothe.vbr2v.mongodb.net/?retryWrites=true&w=majority&appName=virtual-trial-on-clothe
-
-JWT_SECRET= 28mvbSu6YiLwFsY22oKEe7YL0R2ArJTxnrBzWTeJ1hE=
+MONGO_URI = 
+JWT_SECRET=
