--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-MJ_APIKEY_PUBLIC=daaf80d9cfc807579dafe4aae5dcd878
-MJ_APIKEY_PRIVATE=3102a381443e0545b48b84aae4256a35
+MJ_APIKEY_PUBLIC=
+MJ_APIKEY_PRIVATE=
 
