--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "node-mailjet": "^6.0.6",
+    "nodemailer": "^6.10.0",
     "sharp": "^0.33.5"
   }
 }
